--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </ul>
             <hr>
         </section>
-        <button id="download-pdf">Download as PDF</button>
+        <a href="https://sheldzn.github.io/resume/Resume.pdf" id="download-pdf" target="_blank">Download as PDF</a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
