--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css">
+  <style>
+    * { font-family: "Fira Sans", "Arial", serif; }
+  </style>
 </head>
 <body>
     <div class="page-width" id="content">
@@ -103,7 +106,6 @@
                 <li><strong>Tools:</strong> Figma, VS Code, Photoshop, Illustrator, Shopify CLI, Git & GitHub, RESTful API, npm, Klaviyo, Omnisend, Mailchimp, Zapier, Asana, Slack, Monday.com, JIRA</li>
                 <li><strong>Platforms:</strong> Shopify, Webflow, WordPress/WooCommerce, BigCommerce</li>
             </ul>
-            <br/>
             <h3 class="sub-heading">Professional Skills</h3>
             <ul>
                 <li>eCommerce & website Development & Optimization</li>
@@ -113,7 +115,6 @@
                 <li>Problem-Solving & Critical Thinking</li>
                 <li>Project Management & time Efficient</li>
             </ul>
-            <br/>
             <h3 class="sub-heading">Interests</h3>
             <ul>
                 <li>Coding and learning and experimenting with new technologies</li>
@@ -123,6 +124,7 @@
             <hr>
         </section>
 
+    <!--
         <section class="education">
             <h1 class="main-heading">Education</h1>
             <h3 class="sub-heading">University of South Africa (UNISA)</h3>
@@ -133,7 +135,8 @@
             </ul>
             <hr>
         </section>
-        <button id="download-pdf">Download as PDF</button>
+    -->
+        
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
