--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         <section class="who-am-i">
             <h2 class="sub-heading">Who Am I</h2>
-            <div class="body-text"> I am a results-driven developer with around 7 years of experience delivering bespoke eCommerce and web solutions. A certified Shopify Partner with a proven track record 
+            <div class="body-text"> I am a results-driven developer with 5+ years of experience delivering bespoke eCommerce and web solutions. A certified Shopify Partner with a proven track record 
                 of leading development teams, creating custom themes, and integrating third-party apps and APIs to optimize performance. Adept at solving complex problems, adapting to new 
                 technologies, and ensuring seamless user experiences. Passionate about creating visually stimulating, high-performance sites and stores that drive business growth.</div>
             <hr>
