--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         
         <section class="who-am-i">
             <h2 class="sub-heading">Who Am I</h2>
-            <div class="body-text"> I am a results-driven developer with 5+ years of experience delivering bespoke eCommerce and web solutions. A certified Shopify Partner with a proven track record 
-                of leading development teams, creating custom themes, and integrating third-party apps and APIs to optimize performance. Adept at solving complex problems, adapting to new 
-                technologies, and ensuring seamless user experiences. Passionate about creating visually stimulating, high-performance sites and stores that drive business growth.</div>
+            <div class="body-text"> I am a results-driven developer with 5+ years of experience delivering bespoke eCommerce and web solutions. As a certified Shopify Partner
+             I develop and lead development teams, to create custom themes and integrate third-party APIs, ensuring seamless user experiences and optimized performance. Adept at solving 
+              complex problems, adapting to new technologies, and ensuring seamless user experiences. I'm passionate about creating visually stimulating, high-performance sites and stores that drive business growth.</div>
             <hr>
         </section>
 
@@ -79,15 +79,12 @@
                     <li>Built and custom coded email marketing templates using tools like Mailchimp, Klaviyo, and Omnisend.</li>
                 </ul>
             </div>
-            <div class="flex-3">
-                <div>
-                    <strong>   
-                        <a href="https://tdmc.co.za/" target="_blank">TDMC</a>                    
-                        <span>Junior Developer</span>
-                    </strong>           
-                </div>
-                <span><strong>2016 - 2027 | Durban, South Africa</strong></span>
-            </div>
+            <div>
+                <strong>   
+                    <a href="https://tdmc.co.za/" target="_blank">TDMC</a>                    
+                    <span>Junior Developer</span>
+                </strong>           
+            </div>            
             <div class="exp-details">
                 <ul>
                     <li> Transitioned from WordPress/WooCommerce to Shopify, managing store operations, including product uploads and order processing</li>
@@ -102,9 +99,9 @@
             <h1 class="main-heading">Skills & Interests</h1>
             <h3 class="sub-heading">Technical Skills</h3>
             <ul class="first">
-                <li><strong>Programming Languages & Frameworks:</strong> HTML, CSS, Bootstrap, Tailwind, SCSS, SASS, LESS JavaScript, jQuery, Vue.js, React, Typescript, Liquid, Node.js</li>
-                <li><strong>Tools:</strong> Figma, VS Code, Photoshop, Illustrator, Shopify CLI, Git & GitHub, RESTful API, npm, Klaviyo, Omnisend, Mailchimp, Zapier, Asana, Slack, Monday.com, JIRA</li>
-                <li><strong>Platforms:</strong> Shopify, Webflow, WordPress/WooCommerce, BigCommerce</li>
+                <li><strong>Frontend Technologies:</strong> HTML, CSS (including preprocessors like SCSS, SASS, LESS), JavaScript (ES6+), Frameworks/Libraries (Vue.js, React, jQuery), CSS Frameworks (Bootstrap, Tailwind)</li>
+                <li><strong>Backend & Platforms:</strong> Node.js, Liquid, Shopify, Webflow, WordPress/WooCommerce, BigCommerce.</li>
+                <li><strong>Tools & Utilities:</strong> igma, Adobe Creative Suite (Photoshop, Illustrator), VS Code, Git/GitHub, npm, RESTful APIs, Task Management (Asana, JIRA, Monday.com), Communication (Slack), Automation (Zapier).</li>
             </ul>
             <h3 class="sub-heading">Professional Skills</h3>
             <ul>
