--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 <div>
                     <strong>
                         <a href="https://tdmc.co.za/" target="_blank">TDMC</a>
-                        <span>Senior Developer</span>
+                        <span>Senior Developer & Junior Developer</span>
                     </strong>   
                 </div>
-                <span><strong>2017 - 2021 | Durban, South Africa</strong></span>
+                <span><strong>2016 - 2021 | Durban, South Africa</strong></span>
             </div>
             <div class="exp-details">
                 <ul>
@@ -77,21 +77,11 @@
                     <li>Achieved Shopify Partner certification, handling diverse client requests and complex integrations</li>
                     <li>Integrated third-party apps, APIs, and payment gateways (Shopify POS, shipping providers) to enhance store functionality</li>
                     <li>Built and custom coded email marketing templates using tools like Mailchimp, Klaviyo, and Omnisend.</li>
-                </ul>
-            </div>
-            <div>
-                <strong>   
-                    <a href="https://tdmc.co.za/" target="_blank">TDMC</a>                    
-                    <span>Junior Developer</span>
-                </strong>           
-            </div>            
-            <div class="exp-details">
-                <ul>
                     <li> Transitioned from WordPress/WooCommerce to Shopify, managing store operations, including product uploads and order processing</li>
                     <li>Gained hands-on experience coding emailers and templates for various brands, laying the groundwork for Shopify development expertise</li>
                     <li>Supported the development and maintenance of multiple Shopify stores, rapidly growing within the ecosystem</li>
                 </ul>
-            </div>
+            </div>                                   
             <hr>
         </section>       
 
