--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             </div>
             <div class="exp-details">
                 <ul>
-                    <li>Spearhead the development side of a digital agency specializing in Shopify, Wordpress and Webflow, delivering tailored eCommerce and marketing solutions</li>
-                    <li>Developed custom Shopify themes, optimizing the use of Shopify's base frameworks for faster turnaround times</li>
-                    <li>Proficiently utilized Webflow and WordPress, expanding the agency's platform capabilities</li>
-                    <li>Implemented advanced analytics tools like Microsoft Clarity, GA4, tag manager and Hotjar to improve Shopify Plus store performance</li>
-                    <li>Successfully managed multiple projects simultaneously, ensuring on-time delivery and high client satisfaction</li>
+                    <li>Spearhead the development side of a digital agency specializing in Shopify, Wordpress and Webflow, delivering tailored eCommerce and marketing solutions.</li>
+                    <li>Developed custom Shopify themes, optimizing the use of Shopify's base frameworks for faster turnaround times.</li>
+                    <li>Proficiently utilized Webflow and WordPress, expanding the agency's platform capabilities.</li>
+                    <li>Implemented advanced analytics tools like Microsoft Clarity, GA4, tag manager and Hotjar to improve Shopify Plus store performance.</li>
+                    <li>Successfully managed multiple projects simultaneously, ensuring on-time delivery and high client satisfaction.</li>
                 </ul>
             </div>
             <div class="flex-3">
@@ -72,14 +72,14 @@
             </div>
             <div class="exp-details">
                 <ul>
-                    <li>Assisted in getting the company accrediated as Shopify Experts</li>
-                    <li>Led a team of developers, providing training on Shopify and managing day-to-day eCommerce operations</li>
-                    <li>Achieved Shopify Partner certification, handling diverse client requests and complex integrations</li>
-                    <li>Integrated third-party apps, APIs, and payment gateways (Shopify POS, shipping providers) to enhance store functionality</li>
+                    <li>Assisted in getting the company accrediated as Shopify Experts.</li>
+                    <li>Led a team of developers, providing training on Shopify and managing day-to-day eCommerce operations.</li>
+                    <li>Achieved Shopify Partner certification, handling diverse client requests and complex integrations.</li>
+                    <li>Integrated third-party apps, APIs, and payment gateways (Shopify POS, shipping providers) to enhance store functionality.</li>
                     <li>Built and custom coded email marketing templates using tools like Mailchimp, Klaviyo, and Omnisend.</li>
-                    <li> Transitioned from WordPress/WooCommerce to Shopify, managing store operations, including product uploads and order processing</li>
-                    <li>Gained hands-on experience coding emailers and templates for various brands, laying the groundwork for Shopify development expertise</li>
-                    <li>Supported the development and maintenance of multiple Shopify stores, rapidly growing within the ecosystem</li>
+                    <li> Transitioned from WordPress/WooCommerce to Shopify, managing store operations, including product uploads and order processing.</li>
+                    <li>Gained hands-on experience coding emailers and templates for various brands, laying the groundwork for Shopify development expertise.</li>
+                    <li>Supported the development and maintenance of multiple Shopify stores, rapidly growing within the ecosystem.</li>
                 </ul>
             </div>                                   
             <hr>
@@ -89,7 +89,7 @@
             <h1 class="main-heading">Skills & Interests</h1>
             <h3 class="sub-heading">Technical Skills</h3>
             <ul class="first">
-                <li><strong>Frontend Technologies:</strong> HTML, CSS (including preprocessors like SCSS, SASS, LESS), JavaScript (ES6+), Frameworks/Libraries (Vue.js, React, jQuery), CSS Frameworks (Bootstrap, Tailwind)</li>
+                <li><strong>Frontend Technologies:</strong> HTML, CSS (including preprocessors like SCSS, SASS, LESS), JavaScript (ES6+), Frameworks/Libraries (Vue.js, React, jQuery), CSS Frameworks (Bootstrap, Tailwind).</li>
                 <li><strong>Backend & Platforms:</strong> Node.js, Liquid, Shopify, Webflow, WordPress/WooCommerce, BigCommerce.</li>
                 <li><strong>Tools & Utilities:</strong> igma, Adobe Creative Suite (Photoshop, Illustrator), VS Code, Git/GitHub, npm, RESTful APIs, Task Management (Asana, JIRA, Monday.com), Communication (Slack), Automation (Zapier).</li>
             </ul>
