--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span>Durban, South Africa</span>
             </div>
             <div class="flex-2">
-                <a href="www.linkedin.com/in/sheldon-jenkins-2519a21b6" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sheldon-jenkins-2519a21b6" target="_blank">LinkedIn</a>
                 <span>&nbsp;|&nbsp;</span>
                 <a href="https://github.com/Sheldzn" target="_blank">Github</a>
                 <span>&nbsp;|&nbsp;</span>
