--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             <h1 class="main-heading">Skills & Interests</h1>
             <h3 class="sub-heading">Technical Skills</h3>
             <ul class="first">
-                <li><strong>Frontend Technologies:</strong> HTML, CSS (including preprocessors like SCSS, SASS, LESS), JavaScript (ES6+), Frameworks/Libraries (Vue.js, React, jQuery), CSS Frameworks (Bootstrap, Tailwind).</li>
+                <li><strong>Frontend Technologies:</strong> HTML, CSS (including preprocessors like SCSS, SASS, LESS), JavaScript (ES6+), Frameworks/Libraries (Vue.js, React, Remix, jQuery), CSS Frameworks (Bootstrap, Tailwind).</li>
                 <li><strong>Backend & Platforms:</strong> Node.js, Liquid, Shopify, Webflow, WordPress/WooCommerce, BigCommerce.</li>
-                <li><strong>Tools & Utilities:</strong> igma, Adobe Creative Suite (Photoshop, Illustrator), VS Code, Git/GitHub, npm, RESTful APIs, Task Management (Asana, JIRA, Monday.com), Communication (Slack), Automation (Zapier).</li>
+                <li><strong>Tools & Utilities:</strong> Figma, Adobe Creative Suite (Photoshop, Illustrator), VS Code, Git/GitHub, npm, RESTful APIs, Task Management (Asana, JIRA, Monday.com), Communication (Slack), Automation (Zapier).</li>
             </ul>
             <h3 class="sub-heading">Professional Skills</h3>
             <ul>
